Change: ファイル保存先の設定

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,3 +1,5 @@
+# ファイルの保存先設定 デフォルトでは、ローカルのファイルシステムに保存
+# 本番環境ではS3などクラウドストレージを利用することが多いため、設定ファイルを用意
 local:
   service: Disk
   root: <%= Rails.root.join('tmp', 'storage') %>
